# Shield-AI-Backend

./: .gitignore  CSEC-26-IMPLEMENTATION.md  CSEC-30-IMPLEMENTATION.md  CSEC-33-IMPLEMENTATION.md  HOW_SHIELD_AI_WORKS.md  QUICKSTART.md  README.md  csec28_comment.json  csec29_comment.json  csec31_comment.json  csec_23_test_results.json  csec_26_test_results.json  csec_33_test_results.json  pyproject.toml  requirements.txt  test_csec_26.py  test_csec_30.py
docker/: docker-compose.dev.yml  mock_upstream.py
docs/: CERTIFICATION_ROADMAP.md  COCO_SECURITY_FIXES.md  DEPLOYMENT_PLAN.md  EXTENSION_LAUNCH_SECURITY.md  PRODUCT_BRIEF.md  SECURITY_AUDIT_REPORT.md  SECURITY_STORIES_AND_TASKS.md  SECURITY_WRAPPER.md  SHIELD_AI_PRODUCT_STORIES.md
infrastructure/: README.md
jira_comments/: csec28_simple_comment.json  csec32_comment.json
proxy/: health.py  logging_config.py  main.py  websocket_handler.py
shield_ai/: __init__.py  __main__.py
templates/: .pre-commit-config.yaml  dependabot.yml  security.txt
terraform/: main.tf  outputs.tf  variables.tf
test_results/: csec_30_test_results.json  csec_36_test_results.json
tests/: conftest.py  test_api.py  test_attack_simulation.py  test_audit_actions.py  test_audit_attack_simulation.py  test_callback_verifier.py  test_cloudflare_edge.py  test_cloudflare_edge_attacks.py  test_cloudfront.py  test_cloudfront_attacks.py  test_code_validator.py  test_code_validator_attacks.py  test_config.py  test_context_injector.py  test_cross_cutting_attacks.py  test_csec_23.py  test_csec_33.py  test_csec_36.py  test_csp_builder.py  test_rls.py  (+48 more)
(+195 files in other folders)
